--- a/highscores.html
+++ b/highscores.html
@@ -18,12 +18,12 @@
             <div id="questionsDiv">
                 <h1>Highscores</h1>
                 <ul id="highScore"></ul>
-                <button id="goBack">Go Back</button>
+                <button id="restart">Restart</button>
                 <button id="clear" value="reset">Clear Highscore</button>
             </div>
         </div>
     </main>
-    <script src="highscores.html"></script>
+    <script src="assets/js/highscores.js"></script>
 </body>
 
 </html>
