--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <main>
-        <a href=".highscores.html">View Highscores</a>
+        <a href="HighScores.html">View Highscores</a>
         <div id="currentTime"></div>
         <div id="container">
             <div id="questionsDiv">
